--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -7,6 +7,13 @@
 
 
 ////////////////////////////////////////*/
+@import url("http://fonts.googleapis.com/css?family=Ubuntu:400,300,300italic,400italic,500,700,500italic,700italic");
+@import url("https://fonts.googleapis.com/css?family=Cousine:400,400italic,700,700italic");
+@import url("https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400italic,700");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,800,800italic,700italic,700,600italic,600,400italic,300italic,300");
+@import url("https://fonts.googleapis.com/css?family=Archivo+Black");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,600italic,700,700italic,900,900italic");
+@import url("proxima-nova.css");
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary {
   display: block; }
 
@@ -223,12 +230,6 @@ table {
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
 
-/*body background color*/
-/* #62645c */
-/* body text color */
-/* default link color */
-/* color of link on hover */
-/* color of link on hover */
 /* background color of body */
 .container {
   margin-right: auto;
@@ -3311,7 +3312,7 @@ html {
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
-  line-height: 1.7857142857142858;
+  line-height: 1.78571;
   color: #545454;
   background-color: #f6f6f6; }
 
@@ -3330,7 +3331,6 @@ p a {
 
 a {
   color: #545454;
-  /* #545454 #62645c */
   text-decoration: none;
   outline: none; }
   a:hover {
@@ -3358,7 +3358,7 @@ img {
 
 .img-thumbnail {
   padding: 4px;
-  line-height: 1.2857142857142858;
+  line-height: 1.28571;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -3455,7 +3455,7 @@ dl {
   margin-bottom: 18px; }
 
 dt, dd {
-  line-height: 1.2857142857142858; }
+  line-height: 1.28571; }
 
 dt {
   font-weight: bold; }
@@ -3508,7 +3508,7 @@ blockquote {
       margin-bottom: 0; }
   blockquote small, blockquote .small {
     display: block;
-    line-height: 1.2857142857142858;
+    line-height: 1.28571;
     color: #d2d0cd; }
   blockquote small:before, blockquote .small:before {
     content: '\2014 \00A0'; }
@@ -3530,7 +3530,7 @@ output {
   display: block;
   padding-top: 7px;
   font-size: 14px;
-  line-height: 1.2857142857142858;
+  line-height: 1.28571;
   color: #b0aca8;
   vertical-align: middle; }
 
@@ -3911,7 +3911,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
     padding: 3px 20px;
     clear: both;
     font-weight: normal;
-    line-height: 1.2857142857142858;
+    line-height: 1.28571;
     color: #fff;
     white-space: nowrap; }
     .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
@@ -3948,7 +3948,7 @@ input[type="submit"].btn-block, input[type="reset"].btn-block, input[type="butto
   display: block;
   padding: 3px 20px;
   font-size: 12px;
-  line-height: 1.2857142857142858;
+  line-height: 1.28571;
   color: #d2d0cd; }
 
 .dropdown-backdrop {
@@ -4086,7 +4086,7 @@ a.list-group-item {
     margin-bottom: -1px; }
     .nav-tabs > li > a {
       margin-right: 2px;
-      line-height: 1.2857142857142858;
+      line-height: 1.28571;
       border: 1px solid transparent;
       border-radius: 4px 4px 0 0; }
       .nav-tabs > li > a:hover {
@@ -4226,32 +4226,6 @@ a.list-group-item {
   padding-left: 0;
   list-style: none; }
 
-/*@font-face {
-  font-family: "Helvetica-Neue";
-  font-style: normal;
-  font-weight: 200;
-  src: url("../fonts/b7693a83-b861-4aa6-85e0-9ecf676bc4d6.eot?#iefix");
-  src: url("../fonts/b7693a83-b861-4aa6-85e0-9ecf676bc4d6.eot?#iefix") format("eot"), url("../fonts/bcf54343-d033-41ee-bbd7-2b77df3fe7ba.woff") format("woff"), url("../fonts/b0ffdcf0-26da-47fd-8485-20e4a40d4b7d.ttf") format("truetype"), url("../fonts/da09f1f1-062a-45af-86e1-2bbdb3dd94f9.svg#da09f1f1-062a-45af-86e1-2bbdb3dd94f9") format("svg");
-}
-
-
-@font-face {
-  font-family: "Helvetica-Neue";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/07fe0fec-b63f-4963-8ee1-535528b67fdb.eot?#iefix");
-  src: url("../fonts/07fe0fec-b63f-4963-8ee1-535528b67fdb.eot?#iefix") format("eot"), url("../fonts/60be5c39-863e-40cb-9434-6ebafb62ab2b.woff") format("woff"), url("../fonts/4c6503c9-859b-4d3b-a1d5-2d42e1222415.ttf") format("truetype"), url("../fonts/36c182c6-ef98-4021-9b0d-d63122c2bbf5.svg#36c182c6-ef98-4021-9b0d-d63122c2bbf5") format("svg");
-}
-
-
-@font-face {
-  font-family: "Helvetica-Neue";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/c07fef9e-a934-42d7-92ad-69205f2b8a00.eot?#iefix");
-  src: url("../fonts/c07fef9e-a934-42d7-92ad-69205f2b8a00.eot?#iefix") format("eot"), url("../fonts/14ff6081-326d-4dae-b778-d7afa66166fc.woff") format("woff"), url("../fonts/8fda1e47-19be-46c7-8d83-8d4fb35572f0.ttf") format("truetype"), url("../fonts/f751c8ae-1057-46d9-8d74-62592e002568.svg#f751c8ae-1057-46d9-8d74-62592e002568") format("svg");
-}*/
-/*CHANGED TO WRAPPER*/
 .wrapper {
   padding: 42px 11px 6px; }
 
@@ -4300,7 +4274,7 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility; }
 
 p {
-  letter-spacing: .005em;
+  letter-spacing: 0.005em;
   margin-bottom: 18px;
   font-weight: 400;
   text-rendering: optimizeLegibility; }
@@ -4510,8 +4484,8 @@ a {
   margin-bottom: 15px;
   list-style: none; }
 .page-careers .job-title {
-  letter-spacing: .005em;
-  line-height: 1.2857142857142858;
+  letter-spacing: 0.005em;
+  line-height: 1.28571;
   color: #111;
   font-size: 14px;
   font-weight: 200; }
@@ -4574,8 +4548,8 @@ a {
 .page-people .intro {
   font-size: 14px;
   font-weight: 200;
-  letter-spacing: .005em;
-  line-height: 1.2857142857142858;
+  letter-spacing: 0.005em;
+  line-height: 1.28571;
   margin-top: 18px; }
 .page-people article + aside:before {
   background: #d2d0cd;
@@ -4704,7 +4678,7 @@ a {
     border-bottom: 1px solid #fff;
     margin: 18px 0;
     padding-bottom: 18px;
-    padding-right: 33.33333333333333%;
+    padding-right: 33.33333%;
     max-width: 100%; }
 
   .page-perspective .module-content .addthis_toolbox, .page-how-we-work .module-content .addthis_toolbox {
@@ -4844,7 +4818,7 @@ ul{
     /* optional, for multiline li element */
     left: -5px; }
   .module-article li {
-    letter-spacing: .005em;
+    letter-spacing: 0.005em;
     margin-bottom: 18px;
     font-weight: 200;
     text-rendering: optimizeLegibility; }
@@ -4862,12 +4836,11 @@ ul{
       margin: 0; }
   .module-hero .module-title {
     margin: 34px 0 6px;
-    font-family: "Helvetica-Neue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     line-height: 1.1;
     color: inherit;
-    font-size: 30px;
-    font-size: 22px;
-    font-weight: 500;
+    font-size: 31px;
+    font-weight: 900;
     line-height: 1.0909090909090908; }
     .module-hero .module-title small, .module-hero .module-title .small {
       font-weight: normal;
@@ -4909,14 +4882,14 @@ ul{
       .module-article aside[class*="col-"].pull-right {
         clear: right; }
     .module-article > h4, .module-article > p, .module-article > figure, .module-article > ol, .module-article > ul {
-      margin-right: 41.66666666666667%;
+      margin-right: 41.66667%;
       padding-right: 8px; }
     .module-article > h3:first-of-type {
       margin-top: 0; }
     .module-article .intro {
       margin-bottom: 36px; }
     .module-article .author-about {
-      padding-right: 33.33333333333333%; }
+      padding-right: 33.33333%; }
 
   .module-hero {
     margin: 0 -18px 18px; }
@@ -4933,7 +4906,7 @@ ul{
       .module-hero .module-content .container {
         min-height: 150px; }
       .module-hero .module-content .module-title {
-        max-width: 66.66666666666666%; }
+        max-width: 66.66667%; }
     .module-hero .module-overlay {
       bottom: 48px;
       left: 0;
@@ -4949,9 +4922,9 @@ ul{
       .module-hero .module-overlay .module-title {
         border-bottom: 1px solid #d2d0cd;
         padding-bottom: 24px;
-        padding-right: 33.33333333333333%; }
+        padding-right: 33.33333%; }
     .module-hero .module-title {
-      font-size: 30px;
+      font-size: 31px;
       line-height: 1.2; }
     .module-hero .addthis_toolbox {
       position: absolute;
@@ -4960,8 +4933,8 @@ ul{
     .module-hero .download {
       font-size: 1em;
       font-weight: 200;
-      letter-spacing: .005em;
-      line-height: 1.2857142857142858;
+      letter-spacing: 0.005em;
+      line-height: 1.28571;
       margin: 0;
       position: absolute;
       right: 0;
@@ -4970,8 +4943,8 @@ ul{
     .module-hero .read-time {
       font-size: .8em;
       font-weight: 500;
-      letter-spacing: .005em;
-      line-height: 1.2857142857142858;
+      letter-spacing: 0.005em;
+      line-height: 1.28571;
       margin: 0;
       position: absolute;
       right: 0;
@@ -5010,9 +4983,9 @@ ul{
       padding-left: 34px;
       padding-right: 34px; }
     .module-hero .module-content .module-title {
-      max-width: 58.333333333333336%; }
+      max-width: 58.33333%; }
     .module-hero .module-overlay .module-title {
-      padding-right: 41.66666666666667%; } }
+      padding-right: 41.66667%; } }
 @media (min-width: 768px) {
   .module-hero .module-overlay .module-title {
     border-bottom: 1px solid #545454; }
@@ -5722,6 +5695,12 @@ mark {
 .material-icons {
   font-size: inherit !important;
   vertical-align: bottom; }
+
+.article-inner h2 {
+  font-size: 18px;
+  color: #545454; }
+.article-inner .cat {
+  font-size: 18px; }
 
 .carousel {
   position: relative; }
@@ -7292,7 +7271,7 @@ body.modal-open, .modal-open .navbar-fixed-top {
 
 .footer {
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.78571;
   margin-top: 36px;
   padding-top: 36px;
   padding-bottom: 1px;
@@ -7535,9 +7514,14 @@ img[src=""], img[src="http://maps.gstatic.com/mapfiles/api-3/images/mapcnt3.png"
     background-color: #5b5b5b; }
 
 .palette-grey80 {
-  color: #474747; }
+  color: #494949; }
   .palette-grey80.palette-inverse {
-    background-color: #474747; }
+    background-color: #494949; }
+
+.palette-grey90 {
+  color: #303030; }
+  .palette-grey90.palette-inverse {
+    background-color: #303030; }
 
 .palette-blue {
   color: #5B5868; }
@@ -8290,14 +8274,16 @@ input[type="submit"]:hover {
     BLOG TABS
 ###########################*/
 #blog-section .nav > li > a, #blog-section #search {
-  padding: 0 15px 10px 0;
+  padding: 0 0px 10px 0;
   border: none;
-  border-bottom-style: none; }
+  border-bottom-style: none;
+  margin: 0 35px 0 0; }
 
-#blog-section .nav-tabs > li.active > a, .nav-tabs > li.active > a:link {
+#blog-section .nav-tabs > li.active > a, .nav-tabs > li.active > a:link, #blog-section .nav-tabs .tab-pane li a {
   background-color: none !important;
   border: none;
-  border-bottom-style: none; }
+  border-bottom: 4px solid white;
+  color: white; }
 
 #blog-section .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus {
   background-color: none;
@@ -8316,6 +8302,12 @@ input[type="submit"]:hover {
   border: none;
   border-bottom: 4px solid white; }
 
+#blog-section .tab-content li a {
+  padding: 0;
+  border: none;
+  border-bottom-style: none;
+  line-height: 2.5em; }
+
 /*BLOG LIST POSTS*/
 .blog-list-row a.post-image-link {
   min-height: 228px;
@@ -8333,6 +8325,24 @@ input[type="submit"]:hover {
   padding: 1px 2px;
   font-size: .85em;
   color: inherit; }
+
+#blog-recent-list .quote-toggle {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 0;
+  width: 100%;
+  text-align: right;
+  outline: none;
+  z-index: 2;
+  opacity: .75; }
+  #blog-recent-list .quote-toggle:hover {
+    opacity: 1; }
+  #blog-recent-list .quote-toggle i {
+    background-color: white;
+    color: #545454;
+    font-size: .8em !important;
+    vertical-align: top; }
 
 @media (max-width: 767px) {
   .tagcloud .tag {
@@ -8385,13 +8395,14 @@ input[type="submit"]:hover {
     color: #545454;
     font-size: .8em !important;
     vertical-align: top; }
-.sidebar .promo {
+
+.promo {
   padding: 0px;
   position: relative; }
-  .sidebar .promo div {
+  .promo > div {
     padding: 20px; }
-  .sidebar .promo p {
-    background-color: #474747;
+  .promo p {
+    background-color: #494949;
     border-bottom: none;
     margin: 0 0 1em 0;
     font-size: 2em;
@@ -8463,6 +8474,27 @@ input[type="submit"]:hover {
 .pagination li.current a {
   border-bottom: 1px solid #545454; }
 
+h1.blog-heading {
+  font-family: "Varela Round" sans-serif;
+  font-size: 18px;
+  font-weight: 900;
+  text-transform: uppercase;
+  position: relative;
+  width: 225px;
+  margin: 12px auto; }
+  h1.blog-heading:after, h1.blog-heading:before {
+    content: " ";
+    display: block;
+    height: 1px;
+    width: 50px;
+    background-color: #545454;
+    position: absolute;
+    top: 8px; }
+  h1.blog-heading:after {
+    right: -5px; }
+  h1.blog-heading:before {
+    left: -5px; }
+
 .social:before {
   background: #d2d0cd;
   -webkit-box-sizing: border-box;
@@ -8528,6 +8560,42 @@ a:hover span.hint, .social span a:hover span.hint, .read-time a:hover span.hint 
 
   .module-related:before, .social:before {
     width: 100% !important; } }
+/* hebrew */
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Varela Round"), local("VarelaRound-Regular"), url(http://fonts.gstatic.com/s/varelaround/v7/APH4jr0uSos5wiut5cpjrvZjSN9jRjHSPidsMdAc5jQ.woff2) format("woff2");
+  unicode-range: U+0590-05FF, U+20AA, U+25CC, U+FB1D-FB4F; }
+/* latin */
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  src: local("Varela Round"), local("VarelaRound-Regular"), url(http://fonts.gstatic.com/s/varelaround/v7/APH4jr0uSos5wiut5cpjrhampu5_7CjHW5spxoeN3Vs.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000; }
+@font-face {
+  font-family: 'menloregular';
+  src: url("../font/menlo-regular-webfont.eot");
+  src: url("../font/menlo-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../font/menlo-regular-webfont.woff2") format("woff2"), url("../font/menlo-regular-webfont.woff") format("woff"), url("../font/menlo-regular-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+/*@font-face {
+  font-family: 'proxima_nova_rgbold';
+  src: url('../font/proximanova-bold-webfont.eot');
+  src: url('../font/proximanova-bold-webfont.eot?#iefix') format('embedded-opentype'),
+       url('../font/proximanova-bold-webfont.woff2') format('woff2'),
+       url('../font/proximanova-bold-webfont.woff') format('woff'),
+       url('../font/proximanova-bold-webfont.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}*/
+@font-face {
+  font-family: 'freightbig_probold';
+  src: url("../font/freightbigprobold-regular-webfont.eot");
+  src: url("../font/freightbigprobold-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../font/freightbigprobold-regular-webfont.woff2") format("woff2"), url("../font/freightbigprobold-regular-webfont.woff") format("woff"), url("../font/freightbigprobold-regular-webfont.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
 /*
   embeded styles from start
 */
