--- a/greybox/sass/_blog.scss
+++ b/greybox/sass/_blog.scss
@@ -18,14 +18,15 @@
 /*##########################
     BLOG TABS
 ###########################*/
-#blog-section .nav > li > a, #blog-section #search{padding:0 15px 10px 0;border:none;border-bottom-style: none;}
-#blog-section .nav-tabs > li.active > a, .nav-tabs > li.active > a:link{background-color: none !important; border:none;border-bottom-style: none;}
+#blog-section .nav > li > a, #blog-section #search{padding:0 0px 10px 0;border:none;border-bottom-style: none;margin: 0 35px 0 0;}
+#blog-section .nav-tabs > li.active > a, .nav-tabs > li.active > a:link, #blog-section .nav-tabs .tab-pane li a{background-color: none !important; border:none;border-bottom: 4px solid white;color:white;}
 #blog-section .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus{background-color: none;border-bottom-style: none;}
 #blog-section .nav-tabs > li > a:hover{background-color: none !important; border-bottom:2px solid white;}
 #blog-section .nav-tabs > li > a{background-color: none !important; background: none;}
 #blog-section .nav-tabs > li > a:hover, #blog-section .nav-tabs > li > a:focus,
 #blog-section .nav-tabs > li.active > a:hover, #blog-section .nav-tabs > li.active > a:focus {border: none; border-bottom: 4px solid white;}
 
+#blog-section .tab-content li a{padding: 0;border:none;border-bottom-style: none;line-height:2.5em;}
 /*BLOG LIST POSTS*/
 .blog-list-row a.post-image-link{min-height: 228px;display: block;border: none;}
 @media (max-width: 991px){
@@ -35,6 +36,26 @@
     SIDEBAR
 ###########################*/
 .tagcloud .tag{display: inline-block; padding: 1px 2px;font-size:.85em;color: inherit;}
+#blog-recent-list{
+  .quote-toggle{
+    position:absolute;
+    right:0;
+    top:0;
+    padding:0;
+    width:100%;
+    text-align:right;
+    outline:none;
+    z-index:2;
+    opacity:.75;
+    &:hover{opacity:1;}
+    i{
+      background-color:white;
+      color:$textcolor;
+      font-size:.8em !important;
+      vertical-align:top;
+    }
+  }
+}
 @media (max-width: 767px){
   .tagcloud .tag{display: inline-block; padding: 1em;font-size:.85em;color: inherit;background: white;margin: 0 0 3px 0; word-wrap: break-word;border:none;box-sizing: content-box;}
   #blog-list ul{padding-left: 0;}
@@ -68,19 +89,19 @@
       vertical-align:top;
     }
   }
-  .promo{
-    padding:0px;
-    position:relative;
-    div{padding:20px;}
-    p{
-      background-color: $grey80;
-      border-bottom: none;
-      margin:0 0 1em 0;
-      font-size:2em;
-      line-height:1.2em;
-      font-weight:900;
-      padding: 0;
-    }
+}
+.promo{
+  padding:0px;
+  position:relative;
+  &> div{padding:20px;}
+  p{
+    background-color: $grey80;
+    border-bottom: none;
+    margin:0 0 1em 0;
+    font-size:2em;
+    line-height:1.2em;
+    font-weight:900;
+    padding: 0;
   }
 }
 .sidebar li a{display: block; text-decoration: none;font-weight: bold;}
@@ -126,3 +147,28 @@
 .pagination a{padding: 8px 14px;text-decoration: none;border: none;}
 .pagination a:hover{border-bottom: 1px solid #545454; color:black;}
 .pagination li.current a{border-bottom: 1px solid #545454;}
+
+h1.blog-heading{
+  font-family: $blog-heading;
+  font-size: $font-size-med;
+  font-weight: 900;
+  text-transform: uppercase;
+  position:relative;
+  width:225px;
+  margin: 12px auto;
+  &:after, &:before{
+    content: " ";
+    display:block;
+    height:1px;
+    width:50px;
+    background-color:$textcolor;
+    position:absolute;
+    top:8px;
+  }
+  &:after{
+    right:-5px;
+  }
+  &:before{
+    left:-5px;
+  }
+}
