--- a/greybox/sass/_footer.scss
+++ b/greybox/sass/_footer.scss
@@ -40,7 +40,7 @@
 //  border-top: 1px solid #d2d0cd;
 //  color: #878c8c;
   font-size: 12px;
-  line-height: 18px;
+  line-height: $line-height-lg;
   margin-top: 36px;
   padding-top: 36px;
   padding-bottom: 1px;
@@ -68,7 +68,7 @@
   display: none;
 }
 
-@media (min-width: 768px) {
+@media (min-width: $break-small-min) {
   .footer {
     padding-top: 36px;
     padding-bottom: 12px;
