--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -1,15 +1,26 @@
 //_variables.scss
 
-//TYPOGRAPHY
+// TYPOGRAPHY
 $font-family-sans-serif:  "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $font-family-serif:       Georgia, "Times New Roman", Times, serif !default;
-//** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 $font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace !default;
 $font-family-base:        $font-family-sans-serif !default;
 
+// ALT @FONT_FACE
+$ubuntu: 'Ubuntu', sans-serif;
+$cousine: 'Cousine', monospace;
+$oldstandard: 'Old Standard', serif;
+$menlo: 'menloregular', monospace;
+$proxima: 'proxima_nova_rgbold', sans-serif;
+$freight: 'freightbig_probold', Georgia, serif;
+$archivo: 'Archivo Black', sans-serif;
+$source: 'Source Sans Pro', sans-serif;
+$varela: 'Varela Round' sans-serif;
+
 $font-size-base:          14px !default;
-$font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
+$font-size-med:           ceil(($font-size-base * 1.25)) !default; // ~18px
+$font-size-large:         ceil(($font-size-base * 2.15)) !default; // ~30px
 
 $font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
 $font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
@@ -18,24 +29,33 @@ $font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
 $font-size-h5:            $font-size-base !default;
 $font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
 
-//COLORS
-$bodycolor: #f6f6f6;/*body background color*/
-$textcolor: #545454;/* #62645c */ /* body text color */
+$letter-spacing: .005em;
 
-$linkcolor: #545454;/* default link color */
+$line-height-sm: 1.2857142857142858; // small
+$line-height-md: 1.4857142857142858; // alt
+$line-height-lg: 1.7857142857142858; // body
+
+// COLORS
+$bodycolor: #f6f6f6; //body background color
+$textcolor: #545454; //body text color ~ was = #62645c
+
+$linkcolor: #545454; // default link color ~ was = #62645c
 $link-hover-color: darken($linkcolor, 15%) !default;
-$linkhovercolor: #7EA29A;/* color of link on hover */
-$brandlinkhovercolor: black;/* color of link on hover */
+$linkhovercolor: #7EA29A; // on hovercolor of link
+$brandlinkhovercolor: black; // blrand logo color of link on hover
 
-//==MONO-GREY
+// MONO-GREY
 $lightgrey1: #f4f4f4;/* background color of body */
 $lightgrey2: #ededed;
 $medgrey: #ccc;
 $warmgrey1: #686258;
 $transgrey1: rgba(186,186,186,0.7);
 $grey80: #474747;
+$grey: #7c7c7c;
+$grey80: darken($grey, 20%);
+$grey90: darken($grey, 30%);
 
-//==COLOR PALETTE MAIN
+// COLOR PALETTE MAIN
 $navy: #37477D;
 $teal: #7ea29a;
 $purple: #8385c3;
@@ -46,9 +66,10 @@ $lavender-vib: #8385c3;
 $orange: #C75134;
 $olivegrey: #62645c;
 $teal2: #7DB9B3;
+$chartruese: #c1fa21;
 
 
-//RESPONSIVE BREAKS
+// RESPONSIVE BREAKS
 $break-small-max: 767px;
 $break-small-min: 768px;
 $break-medium: 992px;
@@ -60,7 +81,7 @@ $gutter: 8px;
 $gutter-neg: -8px;
 $overlap: -36px;
 
-//COLUMN WIDTHS
+// COLUMN WIDTHS
 $col-1: 8.333333333333332%;
 $col-2: 16.666666666666664%;
 $col-3: 25%;
@@ -74,5 +95,6 @@ $col-10: 83.33333333333334%;
 $col-11: 91.66666666666666%;
 
 
-//ELEMENTS
+// ELEMENTS
 $footer-height: 250px;
+$blog-heading: $varela;
