--- a/greybox/sass/_variables.scss
+++ b/greybox/sass/_variables.scss
@@ -11,7 +11,7 @@ $ubuntu: 'Ubuntu', sans-serif;
 $cousine: 'Cousine', monospace;
 $oldstandard: 'Old Standard', serif;
 $menlo: 'menloregular', monospace;
-$proxima: 'proxima_nova_rgbold', sans-serif;
+$proxima: 'Proxima Nova', sans-serif;
 $freight: 'freightbig_probold', Georgia, serif;
 $archivo: 'Archivo Black', sans-serif;
 $source: 'Source Sans Pro', sans-serif;
@@ -97,4 +97,4 @@ $col-11: 91.66666666666666%;
 
 // ELEMENTS
 $footer-height: 250px;
-$blog-heading: $varela;
+$blog-heading: $proxima;
