--- a/greybox/sass/_social.scss
+++ b/greybox/sass/_social.scss
@@ -12,7 +12,7 @@
     overflow: hidden;
     width: 25%;
   }
-  &:after{
+  /*&:after{
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -21,7 +21,7 @@
     height: 1px;
     margin: 18px 0px;
     width: 25%;
-  }
+  }*/
 }
 .social span{
   margin-right: 20px;
