--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -5298,6 +5298,35 @@ p[class*='col-'] {
   .tile .picturefill-large {
     height: 588px; }
 
+  .tile-graphic.tile-medium .tile-card {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 15px;
+    color: #545454;
+    text-align: center;
+    font-weight: 900 !important;
+    text-transform: uppercase; }
+    .tile-graphic.tile-medium .tile-card .inside {
+      display: table;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      background-color: white;
+      opacity: 0; }
+      .tile-graphic.tile-medium .tile-card .inside:hover {
+        background: white;
+        opacity: 1; }
+      .tile-graphic.tile-medium .tile-card .inside div {
+        display: table-cell;
+        vertical-align: middle; }
+        .tile-graphic.tile-medium .tile-card .inside div span {
+          display: block; }
+      .tile-graphic.tile-medium .tile-card .inside h2 {
+        margin: 18px 0;
+        font-weight: 900; }
   .tile-graphic.tile-small .tile-title {
     /* bottom: 24px; */
     font-size: 22px;
@@ -5328,6 +5357,7 @@ p[class*='col-'] {
     width: 100%;
     padding: 1.15em .5em;
     background: none;
+    opacity: 0;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
@@ -5353,6 +5383,7 @@ p[class*='col-'] {
     .tile-graphic.tile-medium .tile-title:hover {
       color: #545454;
       background: white;
+      opacity: 1;
       -moz-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       -webkit-transition: all 0.3s ease-in-out;
@@ -5452,7 +5483,8 @@ p[class*='col-'] {
     padding-right: 0; }
 
   #projects .col-sm-4 .tile-medium {
-    max-height: 193px;
+    max-height: 318px;
+    /*193px*/
     overflow: hidden; } }
 @media (max-width: 767px) {
   #projects .row .col-sm-4 article {
