--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -362,6 +362,44 @@
     }
   }
   .tile-graphic {
+		&.tile-medium .tile-card {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			padding: 15px;
+			color: $textcolor;
+			text-align:center;
+			font-weight:900 !important;
+			text-transform:uppercase;
+
+				.inside{
+					display:table;
+					width:100%;
+					height:100%;
+					text-align:center;
+					background-color:white;
+					opacity:0;
+
+					//@include transition(all 0.3s ease-in-out);
+		      	&:hover{
+			      	background: white;
+							opacity:1;
+			      	//@include transition(all 0.3s ease-in-out);
+						}
+
+					div{
+						display:table-cell;
+						vertical-align:middle;
+						span{display:block;}
+					}
+					h2{
+						margin:18px 0;
+						font-weight:900;
+					}
+				}
+		}
     &.tile-small .tile-title {
       /* bottom: 24px; */
       font-size: 22px;
@@ -388,6 +426,7 @@
       width: 100%;
       padding: 1.15em .5em;
       background: none;
+			opacity:0;
       @include transition(all 0.3s ease-in-out);
 			+ p {
 				font-family: $font-family-sans-serif;
@@ -410,6 +449,7 @@
       	&:hover{
 					color: $textcolor;
 	      	background: white;
+					opacity:1;
 	      	@include transition(all 0.3s ease-in-out);
 				}
     }
@@ -563,7 +603,9 @@
 }
 @media (min-width: $break-medium) {
 	#featured .featured-image{padding-right: 0;}
-	#projects .col-sm-4 .tile-medium{max-height: 193px;overflow: hidden;}
+	#projects .col-sm-4 .tile-medium{
+		max-height: 318px;/*193px*/
+		overflow: hidden;}
 }
 @media (max-width: $break-small-max){
 	#projects .row .col-sm-4 article{
