--- a/greybox/css/global.css
+++ b/greybox/css/global.css
@@ -4234,7 +4234,7 @@ a.list-group-item {
 
 @media (min-width: 768px) {
   .wrapper {
-    padding: 75px 18px 6px;
+    padding: 75px 18px 0px;
     -webkit-transition: padding .2s ease;
     transition: padding .2s ease; }
     .wrapper.open, .wrapper.in {
@@ -5176,7 +5176,15 @@ p[class*='col-'] {
     color: #b0aca8; }
 
   .tile-people [data-picture] {
-    min-height: 320px; } }
+    min-height: 320px; }
+
+  .tile-graphic img {
+    position: relative; }
+
+  .tile-card {
+    position: relative;
+    background: white;
+    color: #3F3F3F; } }
 @media (min-width: 768px) {
   .tile .picturefill-small {
     height: 126px; }
@@ -5185,6 +5193,40 @@ p[class*='col-'] {
   .tile .picturefill-large {
     height: 444px; }
 
+  .tile-graphic.tile-medium .tile-card {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 15px;
+    color: #545454;
+    text-align: center;
+    /*font-weight:900 !important;*/
+    /*text-transform:uppercase;*/ }
+    .tile-graphic.tile-medium .tile-card .inside {
+      display: table;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      background-color: white;
+      opacity: 0; }
+      .tile-graphic.tile-medium .tile-card .inside:hover {
+        background: white;
+        opacity: 1; }
+      .tile-graphic.tile-medium .tile-card .inside div {
+        display: table-cell;
+        vertical-align: middle; }
+        .tile-graphic.tile-medium .tile-card .inside div span {
+          display: block; }
+      .tile-graphic.tile-medium .tile-card .inside h2 {
+        margin: 18px 0;
+        /*font-weight:900;*/ }
+      .tile-graphic.tile-medium .tile-card .inside .year {
+        color: #7EA29A;
+        font-weight: 500; }
+      .tile-graphic.tile-medium .tile-card .inside .see-more, .tile-graphic.tile-medium .tile-card .inside .view-more {
+        margin: 15px 0; }
   .tile-graphic.tile-small .tile-title, .tile-graphic.tile-medium .tile-title {
     font-weight: 500;
     left: 15px;
@@ -5307,8 +5349,8 @@ p[class*='col-'] {
     padding: 15px;
     color: #545454;
     text-align: center;
-    font-weight: 900 !important;
-    text-transform: uppercase; }
+    /*font-weight:900 !important;*/
+    /*text-transform:uppercase;*/ }
     .tile-graphic.tile-medium .tile-card .inside {
       display: table;
       width: 100%;
@@ -5326,7 +5368,19 @@ p[class*='col-'] {
           display: block; }
       .tile-graphic.tile-medium .tile-card .inside h2 {
         margin: 18px 0;
-        font-weight: 900; }
+        /*font-weight:900;*/ }
+      .tile-graphic.tile-medium .tile-card .inside .year {
+        font-weight: 500; }
+      .tile-graphic.tile-medium .tile-card .inside .see-more, .tile-graphic.tile-medium .tile-card .inside .view-more {
+        margin: 15px auto;
+        padding: 10px 15px;
+        border: 1px solid #545454;
+        border-radius: 3px;
+        font-weight: 500;
+        width: 30%; }
+        .tile-graphic.tile-medium .tile-card .inside .see-more:hover, .tile-graphic.tile-medium .tile-card .inside .view-more:hover {
+          background: #545454;
+          color: white; }
   .tile-graphic.tile-small .tile-title {
     /* bottom: 24px; */
     font-size: 22px;
@@ -5357,7 +5411,6 @@ p[class*='col-'] {
     width: 100%;
     padding: 1.15em .5em;
     background: none;
-    opacity: 0;
     -moz-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     -webkit-transition: all 0.3s ease-in-out;
@@ -5383,7 +5436,6 @@ p[class*='col-'] {
     .tile-graphic.tile-medium .tile-title:hover {
       color: #545454;
       background: white;
-      opacity: 1;
       -moz-transition: all 0.3s ease-in-out;
       -o-transition: all 0.3s ease-in-out;
       -webkit-transition: all 0.3s ease-in-out;
@@ -5411,6 +5463,13 @@ p[class*='col-'] {
         font-weight: normal;
         line-height: 1;
         color: #d2d0cd; }
+
+  #projects .col-sm-4 .row .col-xs-12 .tile-card h2 h2, #projects .row .col-sm-4.col-xs-12 .tile-card h2, #projects .col-sm-4 .tile-card h2 {
+    font-size: 20px; }
+  #projects .col-sm-4 .row .col-xs-12 .tile-card h2 .category, #projects .row .col-sm-4.col-xs-12 .tile-card .category, #projects .col-sm-4 .tile-card .category {
+    visibility: hidden;
+    display: none !important;
+    height: 0; }
 
   .tile-hybrid {
     -webkit-transition: background-color .2s ease;
@@ -5467,13 +5526,19 @@ p[class*='col-'] {
   .tile-hybrid.tile-large a {
     min-height: 882px; }
   .tile-hybrid.tile-large .tile-excerpt {
-    margin-right: 50%; }
+    margin-right: 50%;
+    background: white;
+    padding: 15px; }
 
   .tile-people.tile-small .tile-title {
     font-size: 22px;
     line-height: 1.0909090909090908; }
   .tile-people.tile-large .tile-title {
     left: 49px; } }
+@media (max-width: 1480px) {
+  .tile-hybrid.tile-large .tile-excerpt {
+    background: white;
+    padding: 15px 0; } }
 @media (max-width: 1380px) {
   #projects .col-sm-4 .tile-medium {
     max-height: 318px;
@@ -5482,10 +5547,7 @@ p[class*='col-'] {
   #featured .featured-image {
     padding-right: 0; }
 
-  #projects .col-sm-4 .tile-medium {
-    max-height: 318px;
-    /*193px*/
-    overflow: hidden; } }
+  /*#projects .col-sm-4 .tile-medium{max-height: 193px;overflow: hidden;}*/ }
 @media (max-width: 767px) {
   #projects .row .col-sm-4 article {
     max-height: 335px;
@@ -8533,6 +8595,17 @@ h1.blog-heading {
     right: -5px; }
   h1.blog-heading:before {
     left: -5px; }
+
+.back-top {
+  text-decoration: none;
+  border: 0;
+  display: block;
+  text-align: center;
+  font-weight: 500;
+  padding: 0 0 20px 0; }
+  .back-top:hover {
+    background: white;
+    color: black; }
 
 .social {
   /*&:after{
