--- a/greybox/sass/_tile.scss
+++ b/greybox/sass/_tile.scss
@@ -191,6 +191,16 @@
   .tile-people [data-picture] {
     min-height: 320px;
   }
+	.tile-graphic {
+		img{
+			position:relative;
+		}
+	}
+	.tile-card{
+		position:relative;
+		background:white;
+		color:#3F3F3F;
+	}
 }
 
 @media (min-width: 768px) {
@@ -206,6 +216,55 @@
     }
   }
   .tile-graphic {
+		&.tile-medium .tile-card {
+			width: 100%;
+			height: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+			padding: 15px;
+			color: $textcolor;
+			text-align:center;
+			/*font-weight:900 !important;*/
+			/*text-transform:uppercase;*/
+
+				.inside{
+					display:table;
+					width:100%;
+					height:100%;
+					text-align:center;
+					background-color:white;
+					opacity:0;
+
+					//@include transition(all 0.3s ease-in-out);
+		      	&:hover{
+			      	background: white;
+							opacity:1;
+			      	//@include transition(all 0.3s ease-in-out);
+						}
+
+					div{
+						display:table-cell;
+						vertical-align:middle;
+						span{display:block;}
+					}
+					h2{
+						margin:18px 0;
+						/*font-weight:900;*/
+					}
+					.year{
+						color:$linkhovercolor;
+						font-weight:500;
+					}
+					.category{
+
+					}
+					.see-more, .view-more{
+						margin: 15px 0;
+					}
+				}
+		}
+
     &.tile-small .tile-title, &.tile-medium .tile-title {
       font-weight: 500;
       left: 15px;
@@ -371,8 +430,8 @@
 			padding: 15px;
 			color: $textcolor;
 			text-align:center;
-			font-weight:900 !important;
-			text-transform:uppercase;
+			/*font-weight:900 !important;*/
+			/*text-transform:uppercase;*/
 
 				.inside{
 					display:table;
@@ -396,7 +455,26 @@
 					}
 					h2{
 						margin:18px 0;
-						font-weight:900;
+						/*font-weight:900;*/
+					}
+					.year{
+						font-weight:500;
+					}
+					.category{
+
+					}
+					.see-more, .view-more{
+						margin: 15px auto;
+						padding:10px 15px;
+						border: 1px solid #545454;
+						border-radius:3px;
+						font-weight:500;
+						width:30%;
+
+						&:hover{
+							background:#545454;
+							color:white;
+						}
 					}
 				}
 		}
@@ -426,7 +504,6 @@
       width: 100%;
       padding: 1.15em .5em;
       background: none;
-			opacity:0;
       @include transition(all 0.3s ease-in-out);
 			+ p {
 				font-family: $font-family-sans-serif;
@@ -449,7 +526,6 @@
       	&:hover{
 					color: $textcolor;
 	      	background: white;
-					opacity:1;
 	      	@include transition(all 0.3s ease-in-out);
 				}
     }
@@ -483,6 +559,17 @@
       }
     }
   }
+	#projects .col-sm-4 .row .col-xs-12 .tile-card h2, #projects .row .col-sm-4.col-xs-12 .tile-card, #projects .col-sm-4 .tile-card{
+		h2{
+			font-size:20px;
+		}
+		.category{
+			visibility: hidden;
+			display:none !important;
+			height:0;
+		}
+	}
+
   .tile-hybrid {
     -webkit-transition: background-color .2s ease;
     transition: background-color .2s ease;
@@ -580,6 +667,8 @@
       }
       .tile-excerpt {
         margin-right: 50%;
+				background:white;
+				padding: 15px;
       }
     }
   }
@@ -593,7 +682,16 @@
     }
   }
 }
-
+@media (max-width: $break-xlarge) {
+	.tile-hybrid {
+    &.tile-large {
+      .tile-excerpt {
+        background:white;
+				padding: 15px 0;
+      }
+    }
+  }
+}
 @media (max-width: $break-large) {
 	#projects{
 		.col-sm-4{
@@ -603,9 +701,7 @@
 }
 @media (min-width: $break-medium) {
 	#featured .featured-image{padding-right: 0;}
-	#projects .col-sm-4 .tile-medium{
-		max-height: 318px;/*193px*/
-		overflow: hidden;}
+	/*#projects .col-sm-4 .tile-medium{max-height: 193px;overflow: hidden;}*/
 }
 @media (max-width: $break-small-max){
 	#projects .row .col-sm-4 article{
